<resources>
    <string name="Application_and_notify">申请与通知</string>
    <string name="Are_connected_to_each_other">正在连接对方…</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="Did_not_download">未下载</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="Hands_free">免提</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="Have_downloaded">已下载</string>
    <string name="In_the_call">通话中...</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Is_landing">连接聊天服务器</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="Login_failed">环信登录失败:</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Network_error">网络出错</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="Refused">已拒绝</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="action_settings">Settings</string>
    <string name="activity_report_tip">"若举报被核实，我们会将处理结果通过私信的方式发送给您。
 感谢您对『贰货』的关注，我们会越做越好。"</string>
    <string name="address_add">+新建收货地址</string>
    <string name="address_address">详细地址</string>
    <string name="address_edit_save">保存并使用</string>
    <string name="address_name">收货人</string>
    <string name="address_phone">手机号码</string>
    <string name="address_select_default">【默认】</string>
    <string name="answer">接听</string>
    <string name="app_name">贰货-校园二手闲置</string>
    <string name="are_you_here">当前定位到</string>
    <string name="attach_file">文件</string>
    <string name="attach_location">我的位置</string>
    <string name="attach_picture">相册</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_video_call">视频通话</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="button_pushtotalk">按住语音</string>
    <string name="button_send">发送</string>
    <string name="call_duration">通话时长</string>
    <string name="cancel">取消</string>
    <string name="cannot_chat_with_yourself">就别和自己聊啦 >&lt;</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="confirm_send">确认发货</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="copy_message">复制消息</string>
    <string name="delete">删除</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_video">删除视频</string>
    <string name="delete_voice">删除语音</string>
    <string name="did_not_answer">未接听</string>
    <string name="edu_admin_system_auth">贰货团队承诺仅将学生提供的信息用作验证学信网使用</string>
    <string name="expression">[表情]</string>
    <string name="file">[文件]</string>
    <string name="forward">转发</string>
    <string name="go_to_order">买买买</string>
    <string name="goods_selling_info_turtor">"一.遇到以下情况既有可能存在诈骗的行为，请提高警惕及时举报。
    （1）商品价格异常低。
    （2）卖家要求QQ/微信沟通。
    （3）卖家要求转账汇款，货到付款，交定金。
 二.严禁货到付款，验货时间极短，交钱后如有问题无法追回,容易被骗。
 三.收到快递时，请全程拍摄你的拆包过程，以作为退款凭证。
 四.贰货官方不会向您索取密码及验证码，打死也不告诉别人。"</string>
    <string name="goods_selling_sold">已售出</string>
    <string name="grade_type_doctoral_student">博士生</string>
    <string name="grade_type_postgraduate">硕士生</string>
    <string name="grade_type_undergraduate">大学生</string>
    <string name="group_chat">群聊</string>
    <string name="hang_up">挂断</string>
    <string name="have_a_chat">聊一聊</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受…</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_select_grade">选择入学时间</string>
    <string name="hint_select_school_name">选择学校</string>
    <string name="i_wanna_sell">我要卖</string>
    <string name="image_not_loaded">"这张图好像还没加载好诶 ('.')"</string>
    <string name="image_out_of_memory">哎呀手机君被你的图撑坏了(#>_&lt;#)</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="item_listview_address_edit">编辑</string>
    <string name="list_is_for">正在获取好友列表...</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="login_failure_failed">获取好友失败</string>
    <string name="login_success">登录成功</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="mute">静音</string>
    <string name="my_pocket">我的钱包</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="ok">好的</string>
    <string name="order_confirm">去支付</string>
    <string name="order_confirm_payment">确认支付</string>
    <string name="order_select_address">选择收货地址</string>
    <string name="orderinfo_id">订单号</string>
    <string name="ordering">正在下单</string>
    <string name="pay_alipay">支付宝</string>
    <string name="phone_pwd">请输入您的密码</string>
    <string name="picture">[图片]</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="postage_assisant_tip">运费信息来自圆通公司官方网站，仅供参考.</string>
    <string name="prompt">提示</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="recoding_fail">录音失败，请检查是否授权</string>
    <string name="recording_video">录制视频</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="resend">重发</string>
    <string name="sb_has_ordered">已有人下单</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="send_failure_please">录音失败</string>
    <string name="share_freind">"         将你的邀请码分享给好友，好友填写您的邀请码
 并成功注册，您与您的好友都会获得100个萝卜的奖励！"</string>
    <string name="temporary_does_not">暂不支持大于10M的视频！</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="the_current_group">当前群聊已被群创建者解散</string>
    <string name="title_activity_acticity_content_menu_base">ActicityContentMenuBase</string>
    <string name="title_activity_activity_auth">ActivityAuth</string>
    <string name="title_activity_activity_bind_alipay">ActivityBindAlipay</string>
    <string name="title_activity_activity_change_password">ActivityChangePassword</string>
    <string name="title_activity_activity_go_weekly_selected">ActivityGoWeeklySelected</string>
    <string name="title_activity_activity_other_for_head_view">ActivityOtherForHeadView</string>
    <string name="title_activity_activity_selling">ActivitySelling</string>
    <string name="title_activity_activity_weeky_selected">ActivityWeekySelected</string>
    <string name="title_address">管理收货地址</string>
    <string name="title_address_edit">编辑地址</string>
    <string name="title_address_edit_add">新建地址</string>
    <string name="title_address_select">选择收货地址</string>
    <string name="title_order">买买买</string>
    <string name="title_order_succeed">提交成功</string>
    <string name="title_right_skip">跳过</string>
    <string name="title_select_district">所在地区</string>
    <string name="title_select_grade">选择入学时间</string>
    <string name="title_select_school_name">选择学校</string>
    <string name="title_send">确认发货</string>
    <string name="title_userinfo">我的</string>
    <string name="title_withdraw">提现</string>
    <string name="toast_bind_phone_please">请绑定手机号</string>
    <string name="type_of_payment">支付方式</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_share">分享</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
</resources>