<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="48.0dip"
    android:background="#ffeeeeee">

    <Button
        android:id="@+id/umeng_socialize_title_bar_leftBt"
        android:layout_width="28.0dip"
        android:layout_height="28.0dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8.0dip"
        android:background="@drawable/umeng_socialize_title_back_bt"
        android:textColor="#ffffffff"
        android:textSize="12.0sp" />

    <TextView
        android:id="@+id/umeng_socialize_title_bar_middleTv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/umeng_socialize_comment"
        android:textColor="@color/umeng_socialize_text_title"
        android:textSize="20.0sp" />

    <RelativeLayout
        android:id="@+id/umeng_socialize_title_bar_middle_tab"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/umeng_socialize_title_middle_left"
            android:layout_width="98.0dip"
            android:layout_height="fill_parent"
            android:background="@drawable/umeng_socialize_title_tab_button_left"
            android:text="@string/umeng_socialize_near_At"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />

        <Button
            android:id="@+id/umeng_socialize_title_middle_right"
            android:layout_width="98.0dip"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/umeng_socialize_title_middle_left"
            android:background="@drawable/umeng_socialize_title_tab_button_right"
            android:text="@string/umeng_socialize_friends"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="48.0dip"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/umeng_socialize_title_bar_rightBt"
            android:layout_width="28.0dip"
            android:layout_height="28.0dip"
            android:layout_centerVertical="true"
            android:background="@drawable/umeng_socialize_title_right_bt"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />

        <ProgressBar
            android:id="@+id/umeng_socialize_title_bar_rightBt_progress"
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        style="@style/umeng_socialize_divider"
        android:layout_alignParentBottom="true" />
</RelativeLayout>