<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SingleActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <com.erhuoapp.erhuo.view.include.FrameTitle
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height"
            app:backEnable="true"
            app:title="@string/title_address_edit_add" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0">

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/address_edit_location"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <include layout="@layout/linear_address_location" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/address_edit_form"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10.0dip"
                            android:orientation="vertical">

                            <LinearLayout style="@style/AddressEditLinear">

                                <TextView
                                    style="@style/AddressEditLabel"
                                    android:gravity="center_vertical"
                                    android:text="@string/address_name" />

                                <com.erhuoapp.erhuo.view.custom.EdgingFrame style="@style/AddressEditEdging">

                                    <EditText
                                        android:id="@+id/address_edit_consignee"
                                        style="@style/AddressEditText"
                                        android:layout_height="30.0dip"
                                        android:inputType="text" />
                                </com.erhuoapp.erhuo.view.custom.EdgingFrame>
                            </LinearLayout>

                            <LinearLayout style="@style/AddressEditLinear">

                                <TextView
                                    style="@style/AddressEditLabel"
                                    android:gravity="center_vertical"
                                    android:text="@string/address_phone" />

                                <com.erhuoapp.erhuo.view.custom.EdgingFrame style="@style/AddressEditEdging">

                                    <EditText
                                        android:id="@+id/address_edit_phone"
                                        style="@style/AddressEditText"
                                        android:layout_height="30.0dip"
                                        android:inputType="phone" />
                                </com.erhuoapp.erhuo.view.custom.EdgingFrame>
                            </LinearLayout>

                            <LinearLayout style="@style/AddressEditLinear">

                                <TextView
                                    style="@style/AddressEditLabel"
                                    android:gravity="center_vertical"
                                    android:text="所在地区" />

                                <com.erhuoapp.erhuo.view.custom.EdgingFrame style="@style/AddressEditEdging">

                                    <TextView
                                        android:id="@+id/address_edit_district"
                                        style="@style/AddressEditText"
                                        android:layout_height="30.0dip" />
                                </com.erhuoapp.erhuo.view.custom.EdgingFrame>
                            </LinearLayout>

                            <LinearLayout style="@style/AddressEditLinear">

                                <TextView
                                    style="@style/AddressEditLabel"
                                    android:paddingTop="5.5dip"
                                    android:text="@string/address_address" />

                                <com.erhuoapp.erhuo.view.custom.EdgingFrame style="@style/AddressEditEdging">

                                    <EditText
                                        android:id="@+id/address_edit_detail"
                                        style="@style/AddressEditText"
                                        android:layout_height="60.0dip"
                                        android:gravity="top"
                                        android:inputType="text"
                                        android:maxLength="60" />
                                </com.erhuoapp.erhuo.view.custom.EdgingFrame>
                            </LinearLayout>

                            <LinearLayout
                                style="@style/AddressEditLinear"
                                android:visibility="gone">

                                <TextView
                                    style="@style/AddressEditLabel"
                                    android:gravity="center_vertical"
                                    android:text="邮政编码" />

                                <com.erhuoapp.erhuo.view.custom.EdgingFrame style="@style/AddressEditEdging">

                                    <EditText
                                        android:id="@+id/address_edit_postcode"
                                        style="@style/AddressEditText"
                                        android:layout_height="30.0dip"
                                        android:inputType="number" />
                                </com.erhuoapp.erhuo.view.custom.EdgingFrame>
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/address_edit_default_layout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginBottom="8.0dip"
                                android:layout_marginLeft="20.0dip"
                                android:layout_marginTop="8.0dip"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingRight="10.0dip">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="设为默认地址"
                                    android:textColor="@color/main_blackgray"
                                    android:textSize="@dimen/font_bigmiddle" />

                                <CheckBox
                                    android:id="@+id/address_edit_default"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="10.0dip"
                                    android:layout_marginLeft="15.0dip"
                                    android:layout_marginRight="5.0dip"
                                    android:layout_marginTop="10.0dip"
                                    android:button="@drawable/check_bg" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

                <View style="@style/ShadowTitle" />

                <View style="@style/ShadowBottom" />
            </FrameLayout>

            <FrameLayout style="@style/FrameBottom">

                <com.erhuoapp.erhuo.view.custom.RoundButton
                    android:id="@+id/address_edit_save"
                    style="@style/PureButtonBigWide"
                    android:layout_gravity="center"
                    android:text="@string/address_edit_save" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/address_edit_confirm"
        style="@style/DialogBackground">

        <include layout="@layout/activity_dialog_confirm" />
    </FrameLayout>

    <include layout="@layout/frame_loading" />
</FrameLayout>